rotas das comandas adicionadas
